<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">Analise da Marcha</string>
<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
<string name="title_activity_medicao">Medicao</string>
<string name="timerVal">0:00</string>
<string name="pauseButtonLabel">Parar</string>
<string name="startButtonLabel">Iniciar</string>
    <string name="enviarButtonLabel">Enviar</string>
    <string name="reiniciarButtonLabel">Reiniciar</string>
    <string name="title_activity_preparacao">Preparacao</string>

    <color name="blue">#36AAE9</color>
    <color name="white">#FFFFFF</color>
    <color name="green">#24AB3D</color>
    <color name="puple">#AB2493</color>


</resources>

